--- a/src/components/hero-section/Hero_section.css
+++ b/src/components/hero-section/Hero_section.css
@@ -6,7 +6,7 @@
     background:url(../hero-section/image/IMG_20220319_175916.jpg)no-repeat;
     background-size:cover;
     background-position: center;
-    height:890px;
+    height:px;
 }
 .welcome-hero:before{
     position:absolute;
@@ -54,3 +54,24 @@
 }
 .header-text a:hover{ box-shadow: 0 5px 20px rgba(0,0,0,.4);background:#9f00ff;border: 1px solid #9f00ff;}
 /*.header-text-area*/
+
+@media (max-width: 768px) {
+    .welcome-hero {
+        height: 400px; /* Adjust the height for small screens */
+    }
+
+    .header-text h2 {
+        font-size: 36px; /* Adjust font size for smaller screens */
+    }
+
+    .header-text p {
+        font-size: 16px; /* Adjust font size for smaller screens */
+        margin: 20px 0 40px; /* Adjust margins for smaller screens */
+    }
+
+    .header-text a {
+        width: 160px; /* Adjust button size for smaller screens */
+        height: 50px; /* Adjust button size for smaller screens */
+        font-size: 20px; /* Adjust font size for smaller screens */
+    }
+}
