--- a/public/assets/css/flaticon.css
+++ b/public/assets/css/flaticon.css
@@ -36,4 +36,4 @@
 .flaticon-github-logo:before { content: "\f104"; }
 .flaticon-behance-logo:before { content: "\f105"; }
 .flaticon-dribbble:before { content: "\f106"; }
-.flaticon-themeforest:before { content: "\f107"; }
+.flaticon-linkedin:before { content: "\f108"; }
