--- a/src/components/hero-section/about/about.css
+++ b/src/components/hero-section/about/about.css
@@ -36,17 +36,18 @@
 .single-about-img{
     position: relative;
     box-shadow: 0 5px 20px rgba(14,25,80,.30);}
+
 .single-about-img:before {
     position:  absolute;
     content: " ";
     top: 0;
     left:  0;
-    width: 109%;
+    width: 100%;
     height:  100%;
     background: rgba(31,44,108,.3);
 }
 .single-about-img img {
-    max-width: 495px;
+    max-width: 100%;
     height: 468px;
 }
 .about-list-icon{
@@ -56,7 +57,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 109%;
+    width: 100%;
     height: 90px;
     background: #1f2c6c;
 }
